# orca

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml  orca.md  package-lock.json  package.json  run-tests.mjs
.cursor/: mcp.json
.github/: CODEOWNERS  branch_protection_rules.md
.github/workflows/: build-windows.yml  ci.yml
agent-canvas-server/: Cargo.toml  canvas_tools_manifest.json
agent-canvas-server/src/: agent_manager.rs  canvas_bridge.rs  lib.rs  main.rs  native_telegram.rs  pty_manager.rs
crates/orca-cli/: Cargo.toml
crates/orca-cli/src/: config.rs  http_client.rs  main.rs  setup.rs
crates/orca-cli/src/installer/: macos.rs  mod.rs  windows.rs
crates/orca-daemon/: Cargo.toml
crates/orca-daemon/src/: config.rs  harness_supervisor.rs  main.rs  paths.rs
docs/: AGENT_BROWSER_BATTLE_TEST.md  AGENT_ORCHESTRATOR_SYNC.md  BUILD_VERIFICATION.md  BUILD_WINDOWS.md  CANVAS_AGENT_BRIDGE.md  CENTRAL_BRAIN.md  CI_SETUP.md  DAEMON.md  DEVELOPER.md  DEV_TELEMETRY_BASELINE.md  FEATURES.md  INSPECT_MODULE.md  LINTING_SETUP.md  MEMORY_ARCHITECTURE.md  NATIVE_INTEGRATIONS.md  ORCA_FEATURE_WISHLIST_SPEC.md  ORCA_HARNESS_WISHLIST_IMPLEMENTATION_SPEC.md  ORCHESTRATOR_COMPLETION_ADAPTERS.md  PARITY.md  PRE_COMMIT_SETUP.md  PROACTIVE_ORCA_HARNESS.md  SETUP.md  hermes-orca-visual-setup.md
docs/hermes-dev/: DECISIONS.md  DESIGN-EXTRACTION-JSON-TOOL-IMPLEMENTATION-PLAN.md  DESIGN-EXTRACTION-JSON-TOOL.md  ERROR-CATCHING-BEST-PRACTICES.md  FEATURE-WISHLIST-PARITY.md  FEATURE-WISHLIST.md  HARNESS-BENCHMARK-SUITE-V2-IMPLEMENTATION-PLAN.md  HARNESS-EVAL-V2-PLAN.md  HARNESS-KNOBS-PRIORITIES.md  HERMES-ANY-APP-GUI-UX-SPEC.md  HERMES-ANY-APP-HYBRID-ONESHOT-PLAN.md  HERMES-ANY-APP-HYBRID-SPEC-AUTH.md  HERMES-ANY-APP-IMPLEMENTATION-PLAN.md  HERMES-ANY-APP-PROVIDER-CONFIG.example.json  HERMES-ANY-APP-PROVIDER-CONFIG.schema.json  HERMES-ANY-APP-WORKFLOW-CATALOG.json  HERMES-ANY-APP-WORKFLOW-CATALOG.md  HERMES-LEAD-MODE.md  HERMES-MEMORY-PHILOSOPHY-PARITY-SPEC.md  HERMES-PARITY-HARNESS-OPTIMIZATION-PLAN.md  INTERRUPT-RESUME-PROTOCOL.md  LOOP-CONFORMANCE-SPEC.md  MEMORY-SYSTEM-REBUILD.md  NEXT-STEPS.md  ORCA-25-TASK-ADVERSARIAL-FIX-MAP.md  ORCA-WAVE-1-2-EXECUTION-LOG.md  ORCA-WAVE-3-HARNESS-INTEGRITY-LOG.md  ORCHESTRATOR-TILE-SIMPLIFICATION-PLAN.md  PROJECT-FLESHOUT-BLUEPRINT.md  README.md  WORKLOG.md  (+3 more)
scripts/: bridge-smoke.sh  install-hermes-skills.mjs  migrate-jsx-title-to-data-tooltip.mjs  orca-bridge.mjs  orca-doctor.mjs  rebuild-vault-markdown.mjs  smoke-models.mjs  sync-skill-copies.mjs  telemetry-baseline-check.mjs  test-hermes-tile.mjs  test-openrouter-vision-models.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.orca/: tasks.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/remotion/: README.md  REMOTING_STATUS.md  Root.tsx  package-lock.json  package.json  tsconfig.json
src-tauri/remotion/compositions/: SwissModernPresentation.tsx
src-tauri/remotion/src/: index.ts
src-tauri/src/: app_menu.rs  bedrock_invoke.rs  central_brain.rs  central_brain_watch.rs  git_worktree.rs  lib.rs  llm_env.rs  main.rs  obsidian_vaults.rs  orca_bridge.rs  orca_data.rs  orca_index.rs  orca_tray.rs  pi_oauth.rs  pi_oauth_login.rs  pty.rs  workspace_grep.rs  workspace_paths.rs  workspace_watch.rs
src-tauri/src/skinnytools/: config.rs  content_aware.rs  detector.rs  file_redirect.rs  json_compactor.rs  json_utils.rs  mod.rs  patterns.rs  pipeline.rs  recursive.rs  text.rs  truncator.rs
(+46 files in other folders)
