[package]
name = "agent-canvas"
version = "0.1.0"
description = "Orca Coder — orchestrated canvas IDE"
authors = ["Orca Coder"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "agent_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-positioner = { version = "2.3", features = ["tray-icon"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
keyring = "3"
portable-pty = "0.8"
futures = "0.3"
dirs = "5"
base64 = "0.22"
regex = "1.11"
ignore = "0.4"
globset = "0.4"
once_cell = "1.20"
open = "5"
notify = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2.9", features = ["json"] }
urlencoding = "2"
sha2 = "0.10"
rand = "0.8"
url = "2.5"
aws-config = "1"
aws-sdk-bedrockruntime = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
