[package]
name = "orca-cli"
version = "0.1.0"
edition = "2021"
description = "Orca Coder CLI — install daemon, status, logs, chat, exec, doctor"

[[bin]]
name = "orca"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
dirs = "5"
keyring = "3"
qr2term = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "macros", "io-util", "process"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
which = "6"
